--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "langchain": "^1.2.24",
     "next": "16.1.6",
     "openai": "^6.22.0",
+    "pdf-parse": "^2.4.5",
     "pdfjs-dist": "^5.4.624",
     "react": "19.2.3",
     "react-dom": "19.2.3"
